WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97942
TextureMapperGL destructor crashes
https://bugs.webkit.org/show_bug.cgi?id=97942
Summary
TextureMapperGL destructor crashes
Luiz Agostini
Reported
2012-09-28 14:52:51 PDT
BitmapTextureGL destructor uses a TextureMapperGL instance on its destructor. The problem is that BitmapTextureGL objects are destroyed on TextureMapper destructor and at that time TextureMapperGL specific methods and data are not available any more.
Attachments
patch
(3.10 KB, patch)
2012-09-28 15:01 PDT
,
Luiz Agostini
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Luiz Agostini
Comment 1
2012-09-28 15:01:41 PDT
Created
attachment 166317
[details]
patch
WebKit Review Bot
Comment 2
2012-09-28 16:07:23 PDT
Comment on
attachment 166317
[details]
patch Clearing flags on attachment: 166317 Committed
r129956
: <
http://trac.webkit.org/changeset/129956
>
WebKit Review Bot
Comment 3
2012-09-28 16:07:26 PDT
All reviewed patches have been landed. Closing bug.
Martin Robinson
Comment 4
2012-09-29 13:10:28 PDT
(In reply to
comment #0
)
> BitmapTextureGL destructor uses a TextureMapperGL instance on its destructor. The problem is that BitmapTextureGL objects are destroyed on TextureMapper destructor and at that time TextureMapperGL specific methods and data are not available any more.
Nice fix! I've created a complimentary patch here that also handles the case where the TextureMapper is destroyed, but a backing store still have references to the textures:
https://bugs.webkit.org/show_bug.cgi?id=97394
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug